// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate pyp data objects should return data for three days for all categories 1`] = `
Object {
  "data": Array [
    Object {
      "categories": Array [
        Object {
          "name": "Ambiental",
          "path": "bogota/ambiental",
          "pyp": "3",
        },
        Object {
          "name": "Servicio de Transporte Especial",
          "path": "bogota/servicio-de-transporte-especial",
          "pyp": "7-8",
        },
        Object {
          "name": "Particulares",
          "path": "bogota/particulares",
          "pyp": "0-2-4-6-8",
        },
        Object {
          "name": "Taxis",
          "path": "bogota/taxis",
          "pyp": "7-8",
        },
        Object {
          "name": "Transporte Público Colectivo",
          "path": "bogota/transporte-publico-colectivo",
          "pyp": "5-6",
        },
      ],
      "date": "2018-03-06T00:00:02-05:00",
    },
    Object {
      "categories": Array [
        Object {
          "name": "Ambiental",
          "path": "bogota/ambiental",
          "pyp": "4",
        },
        Object {
          "name": "Servicio de Transporte Especial",
          "path": "bogota/servicio-de-transporte-especial",
          "pyp": "9-0",
        },
        Object {
          "name": "Particulares",
          "path": "bogota/particulares",
          "pyp": "1-3-5-7-9",
        },
        Object {
          "name": "Taxis",
          "path": "bogota/taxis",
          "pyp": "9-0",
        },
        Object {
          "name": "Transporte Público Colectivo",
          "path": "bogota/transporte-publico-colectivo",
          "pyp": "7-8",
        },
      ],
      "date": "2018-03-07T00:00:02-05:00",
    },
    Object {
      "categories": Array [
        Object {
          "name": "Ambiental",
          "path": "bogota/ambiental",
          "pyp": "5",
        },
        Object {
          "name": "Servicio de Transporte Especial",
          "path": "bogota/servicio-de-transporte-especial",
          "pyp": "1-2",
        },
        Object {
          "name": "Particulares",
          "path": "bogota/particulares",
          "pyp": "0-2-4-6-8",
        },
        Object {
          "name": "Taxis",
          "path": "bogota/taxis",
          "pyp": "1-2",
        },
        Object {
          "name": "Transporte Público Colectivo",
          "path": "bogota/transporte-publico-colectivo",
          "pyp": "9-0",
        },
      ],
      "date": "2018-03-08T00:00:02-05:00",
    },
  ],
  "info": Object {
    "ambiental": Object {
      "days": Array [
        "Lunes a sábado (No se aplicará en los días festivos establecidos por la Ley)",
        "Lunes a viernes (No se aplicará en los días festivos establecidos por la Ley)",
      ],
      "decrees": Array [
        Object {
          "name": "Decreto 325 del 16 de agosto de 2006",
          "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=21050",
        },
        Object {
          "name": "Decreto 174 de 2006",
          "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=56330",
        },
      ],
      "hours": Array [
        "Transporte Público Colectivo: 6:00 - 10:00",
        "Transporte de Carga: 9:00 - 10:00",
      ],
      "name": "Ambiental",
      "observations": "No será aplicable a los vehículos de transporte de carga de cinco toneladas o menos de peso bruto vehicular No será aplicable a los vehículos particulares de carga, así como a los vinculados a las empresas de transporte de carga que se acojan al “Programa de Autorregulación Ambiental”.",
      "path": "bogota/ambiental",
      "scheme": "Para todos los vehículos de transporte de carga (incluye servicio público y particular).",
      "vehicleClasses": Array [
        "Vehículos de Transporte Público Colectivo de pasajeros",
        "Vehículos de Transporte de Carga",
      ],
    },
    "especial": Object {
      "days": Array [
        "Lunes a sábado (No se aplicará en los días festivos establecidos por la Ley).",
      ],
      "decrees": Array [
        Object {
          "name": "Decreto 248 del 14 de junio de 2016",
          "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=66359",
        },
      ],
      "hours": Array [
        "5:30 - 21:00",
      ],
      "name": "Servicio de Transporte Especial",
      "observations": "",
      "path": "bogota/servicio-de-transporte-especial",
      "scheme": "Cíclico de acuerdo con el último número de la placa del vehículo (2 dígitos por día según calendario establecido)",
      "vehicleClasses": Array [
        "Vehículos de servicio público de transporte terrestre automotor especial, clase automóvil, camioneta o campero, con capacidad para cuatro (4) pasajeros (sin incluir conductor)",
      ],
    },
    "particulares": Object {
      "days": Array [
        "Lunes a viernes hábiles",
      ],
      "decrees": Array [
        Object {
          "name": "Decreto 515 del 22 de Noviembre de 2016",
          "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=55963",
        },
        Object {
          "name": "Decreto 575 del 17 de diciembre de 2013",
          "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=67497",
        },
        Object {
          "name": "Decreto 159 del 11 de abril de 2014",
          "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=57155",
        },
      ],
      "hours": Array [
        "6:00 - 8:30",
        "15:00 - 19:30",
      ],
      "name": "Particulares",
      "observations": "No aplicará desde el día hábil siguiente al veinticinco (25) de diciembre de cada año, hasta el viernes hábil antes del descanso ordenado por la Ley 51 de 1983 para la festividad correspondiente al seis (6) de enero del año siguiente.",
      "path": "bogota/particulares",
      "scheme": "Día par hábil: placa último dígito par. Día impar hábil: placa último dígito impar.",
      "vehicleClasses": Array [
        "Vehículos automotores de servicio particular",
      ],
    },
    "taxis": Object {
      "days": Array [
        "Lunes a sábado (No se aplicará en los días festivos establecidos por la Ley)",
      ],
      "decrees": Array [
        Object {
          "name": "Decreto 660 del 27 de agosto de 2001",
          "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=4643",
        },
        Object {
          "name": "Decreto 058 de 2003 y Decreto 051 de 2004",
          "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=12124",
        },
      ],
      "hours": Array [
        "5:30 - 21:00",
      ],
      "name": "Taxis",
      "observations": "",
      "path": "bogota/taxis",
      "scheme": "Cíclico de acuerdo con el último número de la placa del vehículo (2 dígitos por día según calendario establecido)",
      "vehicleClasses": Array [
        "Vehículos de transporte público individual de pasajeros - Taxis",
      ],
    },
    "tpc": Object {
      "days": Array [
        "Lunes a sábado (No se aplicará en los días domingos y festivos establecidos por la Ley)",
      ],
      "decrees": Array [
        Object {
          "name": "Decreto 444 de 2014",
          "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=59702",
        },
      ],
      "hours": Array [
        "Todo el día",
      ],
      "name": "Transporte Público Colectivo",
      "observations": "Los vehículos de servicio público de transporte colectivo de pasajeros con restricción, podrán circular con no más de un (1) acompañante, únicamente para atender labores de mantenimiento, alistamiento, reparación o revisión técnico mecánica, portando en un lugar visible aviso que exprese claramente que se encuentran fuera de servicio.",
      "path": "bogota/transporte-publico-colectivo",
      "scheme": "Cíclico de acuerdo con el último número de la placa del vehículo (2 dígitos por día según calendario establecido)",
      "vehicleClasses": Array [
        "Vehículos de Transporte Público Colectivo (TPC)",
      ],
    },
  },
  "name": "Bogotá",
  "path": "bogota",
}
`;

exports[`Generate pyp data objects should return pyp data for one date 1`] = `
Array [
  Object {
    "name": "Ambiental",
    "path": "bogota/ambiental",
    "pyp": "3",
  },
  Object {
    "name": "Servicio de Transporte Especial",
    "path": "bogota/servicio-de-transporte-especial",
    "pyp": "7-8",
  },
  Object {
    "name": "Particulares",
    "path": "bogota/particulares",
    "pyp": "0-2-4-6-8",
  },
  Object {
    "name": "Taxis",
    "path": "bogota/taxis",
    "pyp": "7-8",
  },
  Object {
    "name": "Transporte Público Colectivo",
    "path": "bogota/transporte-publico-colectivo",
    "pyp": "5-6",
  },
]
`;

exports[`Generate pyp data objects should return pyp meta-info for all categories 1`] = `
Object {
  "ambiental": Object {
    "days": Array [
      "Lunes a sábado (No se aplicará en los días festivos establecidos por la Ley)",
      "Lunes a viernes (No se aplicará en los días festivos establecidos por la Ley)",
    ],
    "decrees": Array [
      Object {
        "name": "Decreto 325 del 16 de agosto de 2006",
        "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=21050",
      },
      Object {
        "name": "Decreto 174 de 2006",
        "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=56330",
      },
    ],
    "hours": Array [
      "Transporte Público Colectivo: 6:00 - 10:00",
      "Transporte de Carga: 9:00 - 10:00",
    ],
    "name": "Ambiental",
    "observations": "No será aplicable a los vehículos de transporte de carga de cinco toneladas o menos de peso bruto vehicular No será aplicable a los vehículos particulares de carga, así como a los vinculados a las empresas de transporte de carga que se acojan al “Programa de Autorregulación Ambiental”.",
    "path": "bogota/ambiental",
    "scheme": "Para todos los vehículos de transporte de carga (incluye servicio público y particular).",
    "vehicleClasses": Array [
      "Vehículos de Transporte Público Colectivo de pasajeros",
      "Vehículos de Transporte de Carga",
    ],
  },
  "especial": Object {
    "days": Array [
      "Lunes a sábado (No se aplicará en los días festivos establecidos por la Ley).",
    ],
    "decrees": Array [
      Object {
        "name": "Decreto 248 del 14 de junio de 2016",
        "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=66359",
      },
    ],
    "hours": Array [
      "5:30 - 21:00",
    ],
    "name": "Servicio de Transporte Especial",
    "observations": "",
    "path": "bogota/servicio-de-transporte-especial",
    "scheme": "Cíclico de acuerdo con el último número de la placa del vehículo (2 dígitos por día según calendario establecido)",
    "vehicleClasses": Array [
      "Vehículos de servicio público de transporte terrestre automotor especial, clase automóvil, camioneta o campero, con capacidad para cuatro (4) pasajeros (sin incluir conductor)",
    ],
  },
  "particulares": Object {
    "days": Array [
      "Lunes a viernes hábiles",
    ],
    "decrees": Array [
      Object {
        "name": "Decreto 515 del 22 de Noviembre de 2016",
        "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=55963",
      },
      Object {
        "name": "Decreto 575 del 17 de diciembre de 2013",
        "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=67497",
      },
      Object {
        "name": "Decreto 159 del 11 de abril de 2014",
        "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=57155",
      },
    ],
    "hours": Array [
      "6:00 - 8:30",
      "15:00 - 19:30",
    ],
    "name": "Particulares",
    "observations": "No aplicará desde el día hábil siguiente al veinticinco (25) de diciembre de cada año, hasta el viernes hábil antes del descanso ordenado por la Ley 51 de 1983 para la festividad correspondiente al seis (6) de enero del año siguiente.",
    "path": "bogota/particulares",
    "scheme": "Día par hábil: placa último dígito par. Día impar hábil: placa último dígito impar.",
    "vehicleClasses": Array [
      "Vehículos automotores de servicio particular",
    ],
  },
  "taxis": Object {
    "days": Array [
      "Lunes a sábado (No se aplicará en los días festivos establecidos por la Ley)",
    ],
    "decrees": Array [
      Object {
        "name": "Decreto 660 del 27 de agosto de 2001",
        "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=4643",
      },
      Object {
        "name": "Decreto 058 de 2003 y Decreto 051 de 2004",
        "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=12124",
      },
    ],
    "hours": Array [
      "5:30 - 21:00",
    ],
    "name": "Taxis",
    "observations": "",
    "path": "bogota/taxis",
    "scheme": "Cíclico de acuerdo con el último número de la placa del vehículo (2 dígitos por día según calendario establecido)",
    "vehicleClasses": Array [
      "Vehículos de transporte público individual de pasajeros - Taxis",
    ],
  },
  "tpc": Object {
    "days": Array [
      "Lunes a sábado (No se aplicará en los días domingos y festivos establecidos por la Ley)",
    ],
    "decrees": Array [
      Object {
        "name": "Decreto 444 de 2014",
        "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=59702",
      },
    ],
    "hours": Array [
      "Todo el día",
    ],
    "name": "Transporte Público Colectivo",
    "observations": "Los vehículos de servicio público de transporte colectivo de pasajeros con restricción, podrán circular con no más de un (1) acompañante, únicamente para atender labores de mantenimiento, alistamiento, reparación o revisión técnico mecánica, portando en un lugar visible aviso que exprese claramente que se encuentran fuera de servicio.",
    "path": "bogota/transporte-publico-colectivo",
    "scheme": "Cíclico de acuerdo con el último número de la placa del vehículo (2 dígitos por día según calendario establecido)",
    "vehicleClasses": Array [
      "Vehículos de Transporte Público Colectivo (TPC)",
    ],
  },
}
`;
